Use Stream.toList method (#662)
Simpler code than collect(Collectors.toList())